// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod 1`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": A {
      "variable": "method",
    },
    "object": Object {
      "method": [Function],
    },
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod 2`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": A {
      "variable": "method",
    },
    "object": Object {
      "method": [Function],
    },
    "payload": "method",
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod after class is instanced 1`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": B {
      "variable": "method",
    },
    "object": Object {
      "method": [Function],
    },
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod after class is instanced 2`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": B {
      "variable": "method",
    },
    "object": Object {
      "method": [Function],
    },
    "payload": "B method",
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod for extended class 1`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": B {
      "variable": "method",
    },
    "object": Object {
      "method": [Function],
    },
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod for extended class 2`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": B {
      "variable": "method",
    },
    "object": Object {
      "method": [Function],
    },
    "payload": "B method",
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod for extended classes with same ancestor 1`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": B {
      "variable": "method",
    },
    "object": Object {
      "method": [Function],
    },
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod for extended classes with same ancestor 2`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": B {
      "variable": "method",
    },
    "object": Object {
      "method": [Function],
    },
    "payload": "method",
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod for static method 1`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticMethod": [Function],
      "staticMethod2": [Function],
    },
    "property": "staticMethod",
    "target": [Function],
  },
]
`;

exports[`createAspect method for class should call pattern.beforeMethod and pattern.afterMethod for static method 2`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticMethod": [Function],
      "staticMethod2": [Function],
    },
    "payload": "static method",
    "property": "staticMethod",
    "target": [Function],
  },
]
`;

exports[`createAspect method for instance should call pattern.beforeMethod and pattern.afterMethod 1`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": A {
      "variable": undefined,
      Symbol(AopPattern): Object {
        "afterGetter": [Function],
        "afterMethod": [Function],
        "beforeGetter": [Function],
        "beforeMethod": [Function],
      },
    },
    "object": A {
      "variable": undefined,
      Symbol(AopPattern): Object {
        "afterGetter": [Function],
        "afterMethod": [Function],
        "beforeGetter": [Function],
        "beforeMethod": [Function],
      },
    },
    "property": "method",
    "target": [Function],
  },
]
`;

exports[`createAspect method for instance should call pattern.beforeMethod and pattern.afterMethod 2`] = `
Array [
  Object {
    "args": Array [
      Object {},
      1,
    ],
    "context": A {
      "variable": undefined,
      Symbol(AopPattern): Object {
        "afterGetter": [Function],
        "afterMethod": [Function],
        "beforeGetter": [Function],
        "beforeMethod": [Function],
      },
    },
    "object": A {
      "variable": undefined,
      Symbol(AopPattern): Object {
        "afterGetter": [Function],
        "afterMethod": [Function],
        "beforeGetter": [Function],
        "beforeMethod": [Function],
      },
    },
    "payload": undefined,
    "property": "method",
    "target": [Function],
  },
]
`;
